updated ui for main and password

--- a/Projects/PasswordGenerator/index.html
+++ b/Projects/PasswordGenerator/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Akulav | Cipher Forge</title>
-    <meta name="description" content="Local-first secure password generation." />
+    <title>Cipher Forge | Secure Generation</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -12,42 +11,45 @@
 </head>
 <body>
     <div class="wrap">
-        <main class="card" role="main">
+        <main class="card">
             <header>
                 <div class="header-main">
                     <h1>Cipher <span>Forge</span></h1>
-                    <div class="sub">Protocol // Local Hardware Encryption</div>
+                    <div class="sub">Advanced Encryption Laboratory</div>
                 </div>
                 <div class="hud-stats">
                     <span id="entropy" class="primary-text">0.00</span> 
-                    <div class="status-indicator">Entropy Bits</div>
+                    <span id="entropyLabel" class="sub" style="display:block">Bits</span>
                 </div>
             </header>
 
             <div class="content">
                 <section class="panel">
                     <div class="password-box">
-                        <label>Generated Output</label>
-                        <div class="pw" id="output" aria-live="polite">--------</div>
+                        <label>Generated Result</label>
+                        <div class="pw-container">
+                            <div class="pw" id="output">--------</div>
+                            <div id="warnings" style="font-size: 0.7rem; color: var(--danger); margin-top: 5px;"></div>
+                        </div>
                         
                         <div class="btns">
-                            <button id="generate">Generate</button>
-                            <button id="copy" class="btn-ghost">Copy</button>
-                            <button id="regen" class="btn-ghost">Batch 100</button>
-                            <button id="clear" class="btn-danger">Purge</button>
+                            <button id="generate">Generate Secure Key</button>
+                            <button id="copy" class="btn-ghost">Copy Text</button>
+                            <button id="regen" class="btn-ghost">Batch Export</button>
+                            <button id="clear" class="btn-danger">Clear</button>
                         </div>
 
                         <div class="strength-meter">
                             <div class="bar"><span id="meter"></span></div>
-                            <div id="status" class="sub" style="margin-top:10px; opacity:0.6;">Ready for Input</div>
+                            <div id="status" class="sub" style="margin-top:12px; text-transform: none; letter-spacing: 0;">System Ready</div>
                         </div>
                     </div>
                 </section>
 
-                <form id="form" class="panel" autocomplete="off">
+                <form id="form" class="panel">
                     <div class="controls">
                         <div class="control-group">
-                            <label for="length">Bit Length</label>
+                            <label>Bit Complexity</label>
                             <div class="slider-wrap">
                                 <input id="length" type="range" min="8" max="256" value="16" />
                                 <input id="lengthNum" type="number" min="4" max="256" value="16" />
@@ -55,28 +57,28 @@
                         </div>
 
                         <div class="control-group">
-                            <label>Complexity Parameters</label>
+                            <label>Character Sets</label>
                             <div class="checks">
-                                <label class="check"><input id="lower" type="checkbox" checked> <span>a-z</span></label>
-                                <label class="check"><input id="upper" type="checkbox" checked> <span>A-Z</span></label>
-                                <label class="check"><input id="digits" type="checkbox" checked> <span>0-9</span></label>
-                                <label class="check"><input id="symbols" type="checkbox"> <span>#%&@</span></label>
+                                <label class="check"><input id="lower" type="checkbox" checked> <span>Lowercase</span></label>
+                                <label class="check"><input id="upper" type="checkbox" checked> <span>Uppercase</span></label>
+                                <label class="check"><input id="digits" type="checkbox" checked> <span>Numbers</span></label>
+                                <label class="check"><input id="symbols" type="checkbox"> <span>Symbols</span></label>
                             </div>
                         </div>
 
                         <div class="control-group">
-                            <label class="check"><input id="noSimilar" type="checkbox"> <span>Remove Ambiguous</span></label>
-                            <label class="check"><input id="requireEach" type="checkbox" checked> <span>Strict Inclusion</span></label>
+                            <label>Character Filtering</label>
+                            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+                                <textarea id="exclude" placeholder="Exclude chars..." style="width:100%; height:40px; font-size: 11px;"></textarea>
+                                <textarea id="custom" placeholder="Include chars..." style="width:100%; height:40px; font-size: 11px;"></textarea>
+                            </div>
                         </div>
 
-                        <div class="grid-2">
-                            <div class="control-group">
-                                <label for="exclude">Blacklist</label>
-                                <textarea id="exclude" placeholder="Characters..."></textarea>
-                            </div>
-                            <div class="control-group">
-                                <label for="custom">Whitelist</label>
-                                <textarea id="custom" placeholder="Characters..."></textarea>
+                        <div class="control-group">
+                            <label>System Rules</label>
+                            <div class="checks">
+                                <label class="check"><input id="noSimilar" type="checkbox"> <span>No Ambiguous</span></label>
+                                <label class="check"><input id="requireEach" type="checkbox" checked> <span>Strict Inclusion</span></label>
                             </div>
                         </div>
                     </div>
@@ -85,9 +87,9 @@
 
             <footer class="foot">
                 <div class="help">
-                    SECURITY: <code>crypto.getRandomValues()</code> verified.
+                    Verified Security: <code>AES-Standard Entropy</code>
                 </div>
-                <a class="link-btn" href="#" id="downloadTxt" download>Export Log</a>
+                <a class="link-btn" href="#" id="downloadTxt" download>Export Results</a>
             </footer>
         </main>
     </div>
