--- a/index.html
+++ b/index.html
@@ -3,35 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akulav | Orbital Nexus</title>
+    <title>Akulav | Digital Artisan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="atmosphere">
-        <div class="noise-overlay"></div>
-        <div class="monolith m1"></div>
-        <div class="monolith m2"></div>
-        <div class="monolith m3"></div>
-        <div class="nebula"></div>
+        <div class="aura a1"></div>
+        <div class="aura a2"></div>
     </div>
 
     <div class="app-wrapper">
         <header>
-            <div class="badge_container">
-               <div class="badge">System Online</div>
-            </div>
-            <h1 class="glitch-title">Akulav<span>.</span></h1>
-            <p>Architect of Digital Realms</p>
+            <div class="badge">Portfolio v2.0</div>
+            <h1 class="fancy-title">Akulav</h1>
+            <p>Crafting high-fidelity digital experiences</p>
         </header>
 
         <main class="grid-container" id="projectGrid">
             </main>
 
         <footer>
-            <div class="scanner-line"></div>
-            <p>Akulav&copy; <span id="year"></span></p>
+            <p>Designed by Akulav &copy; <span id="year"></span></p>
         </footer>
     </div>
 
