Minecraft Launcher Web UI

--- a/Projects/GalleryBeta/index.html
+++ b/Projects/GalleryBeta/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>MediaNexus Pro</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
@@ -12,7 +12,7 @@
     <nav class="pro-nav">
         <div class="nav-brand">
             <i class="fa-solid fa-shield-halved"></i>
-            <span>NEXUS<b>PRO</b></span>
+            <span>GALLERY<b>VIEWER</b></span>
         </div>
         
         <div class="nav-search">
