--- a/Projects/AkulavMcPortal/index.html
+++ b/Projects/AkulavMcPortal/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akulav Portal</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Fira+Code&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <header>
         <div class="logo-group">
             <h1 style="margin:0">AKULAV<span style="color:var(--accent)">PORTAL</span></h1>
-            <div id="agent-status" class="status-badge">AGENT OFFLINE</div>
+            <div id="agent-status" class="status-badge" style="margin-top:5px; font-size: 10px; color: var(--text-dim);">Agent Offline</div>
         </div>
         
         <a href="https://github.com/Akulav/akulav.github.io/releases/download/1.0.0/AkulavMinecraftAgent.exe" download="AkulavMinecraftAgent.exe" class="agent-download-btn">
@@ -24,11 +24,13 @@
     </header>
 
     <div id="main-view">
-        <h2 style="margin-bottom: 30px;">Available Modpacks</h2>
+        <h2 style="margin-bottom: 40px; font-weight: 800; font-size: 32px; align-self: flex-start;">Library</h2>
         <div class="grid" id="pack-grid"></div>
     </div>
 
     <div id="detail-view" style="display:none;"></div>
+
+    <footer>Made by Akulav ♥</footer>
 
     <script src="app.js"></script>
 </body>
