Pre-update for auto-update features

--- a/Projects/AkulavMcPortal/index.html
+++ b/Projects/AkulavMcPortal/index.html
@@ -12,10 +12,10 @@
     <header>
         <div class="logo-group">
             <h1 style="margin:0">AKULAV<span style="color:var(--accent)">PORTAL</span></h1>
-            <div id="agent-status" class="status-badge" style="margin-top:5px; font-size: 10px; color: var(--text-dim);">Agent Offline</div>
+            <div id="agent-status" class="status-badge">Checking Agent...</div>
         </div>
         
-        <a href="https://github.com/Akulav/akulav.github.io/releases/download/1.0.0/AkulavMinecraftAgent.exe" download="AkulavMinecraftAgent.exe" class="agent-download-btn">
+        <a href="AkulavAgent.exe" download="AkulavAgent.exe" class="agent-download-btn">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v4M7 10l5 5 5-5M12 15V3"/>
             </svg>
