--- a/Projects/AkulavMcPortal/index.html
+++ b/Projects/AkulavMcPortal/index.html
@@ -10,18 +10,18 @@
 <body>
 
     <header>
-        <div class="logo-group">
-            <h1 style="margin:0">AKULAV<span style="color:var(--accent)">PORTAL</span></h1>
-            <div id="agent-status" class="status-badge">Checking Agent...</div>
-        </div>
-        
-        <a href="AkulavAgent.exe" download="AkulavAgent.exe" class="agent-download-btn">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v4M7 10l5 5 5-5M12 15V3"/>
-            </svg>
-            Download Agent
-        </a>
-    </header>
+    <div class="logo-group">
+        <h1 style="margin:0">AKULAV<span style="color:var(--accent)">PORTAL</span></h1>
+        <div id="agent-status" style="font-size: 11px; font-weight: bold;">CONNECTING...</div>
+    </div>
+    
+    <a href="#" id="agent-download-link" class="agent-download-btn">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v4M7 10l5 5 5-5M12 15V3"/>
+        </svg>
+        Download Agent
+    </a>
+</header>
 
     <div id="main-view">
         <h2 style="margin-bottom: 40px; font-weight: 800; font-size: 32px; align-self: flex-start;">Library</h2>
